--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -61,6 +61,9 @@
      </widget>
     </item>
     <item>
+     <widget class="QTextEdit" name="TextOutput" />
+    </item>
+    <item>
      <widget class="pqTreeWidget" name="DSMContents" >
       <property name="sizePolicy" >
        <sizepolicy vsizetype="MinimumExpanding" hsizetype="Ignored" >
