adding connection option to DSMManager and remote DSM to Gadget2
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1331 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -47,9 +47,16 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="Query" >
+     <widget class="QPushButton" name="ConnectDSM" >
       <property name="text" >
-       <string>Query</string>
+       <string>ConnectDSM</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="H5Dump" >
+      <property name="text" >
+       <string>H5Dump</string>
       </property>
      </widget>
     </item>
