Move TestDSM to DSMManger testing - Add DSM connection test in TestDSM - Add publish/unpublish DSM, fix different connection issues - Add a temporary thread in DSMManager waiting for client accept - Need to find something to exit from MPI_Comm_accept if nobody tries to connect - Other minor improvements etc etc
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1335 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -25,7 +25,7 @@
     <item>
      <widget class="QCheckBox" name="a1" >
       <property name="text" >
-       <string>Unused</string>
+       <string>DSM on Server</string>
       </property>
       <property name="checked" >
        <bool>true</bool>
@@ -47,9 +47,16 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="ConnectDSM" >
+     <widget class="QPushButton" name="PublishDSM" >
       <property name="text" >
-       <string>ConnectDSM</string>
+       <string>PublishDSM</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="UnpublishDSM" >
+      <property name="text" >
+       <string>UnpublishDSM</string>
       </property>
      </widget>
     </item>
