Add connection capability between different PV instances - Clean up stuff
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1370 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -47,6 +47,20 @@
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="ConnectDSM" >
+      <property name="text" >
+       <string>ConnectDSM</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="DisconnectDSM" >
+      <property name="text" >
+       <string>DisconnectDSM</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QPushButton" name="PublishDSM" >
       <property name="text" >
        <string>PublishDSM</string>
