Add XdmfReader3, DSMDisplay button - still needs work
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1372 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -89,6 +89,13 @@
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="DisplayDSM" >
+      <property name="text" >
+       <string>DisplayDSM</string>
+      </property>
+     </widget>
+    </item>    
+    <item>
      <widget class="QTextEdit" name="TextOutput" />
     </item>
     <item>
