Fix pb with multiple H5Dump - Add ClearDSM button (not completely enabled yet)
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1393 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -47,6 +47,13 @@
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="ClearDSM" >
+      <property name="text" >
+       <string>ClearDSM</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QPushButton" name="ConnectDSM" >
       <property name="text" >
        <string>ConnectDSM</string>
