--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -29,73 +29,10 @@
          <x>0</x>
          <y>0</y>
          <width>393</width>
-         <height>528</height>
+         <height>557</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
-        <item>
-         <widget class="QFrame" name="frame">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>0</height>
-           </size>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::StyledPanel</enum>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Sunken</enum>
-          </property>
-          <layout class="QVBoxLayout" name="verticalLayout_2">
-           <item>
-            <layout class="QFormLayout" name="formLayout">
-             <property name="fieldGrowthPolicy">
-              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-             </property>
-             <item row="1" column="0">
-              <widget class="QLabel" name="xdmfFilePathLabel">
-               <property name="text">
-                <string>XDMF file path</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="1">
-              <widget class="QLineEdit" name="xdmfFilePathLineEdit"/>
-             </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="xdmfFileTypeLabel">
-               <property name="text">
-                <string>XDMF file type</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="1">
-              <widget class="QComboBox" name="xdmfFileTypeComboBox">
-               <item>
-                <property name="text">
-                 <string>Full description</string>
-                </property>
-               </item>
-               <item>
-                <property name="text">
-                 <string>Pseudo description</string>
-                </property>
-               </item>
-              </widget>
-             </item>
-             <item row="2" column="1">
-              <widget class="QPushButton" name="browseFile">
-               <property name="text">
-                <string>Browse...</string>
-               </property>
-              </widget>
-             </item>
-            </layout>
-           </item>
-          </layout>
-         </widget>
-        </item>
         <item>
          <widget class="QFrame" name="frame_2">
           <property name="enabled">
@@ -114,6 +51,19 @@
            <number>0</number>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QCheckBox" name="dsmIsServer">
+             <property name="text">
+              <string>Is Server (For testing only)</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+             <property name="tristate">
+              <bool>false</bool>
+             </property>
+            </widget>
+           </item>
            <item>
             <layout class="QFormLayout" name="formLayout_3">
              <property name="fieldGrowthPolicy">
@@ -245,6 +195,69 @@
           <property name="readOnly">
            <bool>true</bool>
           </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QFrame" name="frame">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="frameShape">
+           <enum>QFrame::StyledPanel</enum>
+          </property>
+          <property name="frameShadow">
+           <enum>QFrame::Sunken</enum>
+          </property>
+          <layout class="QVBoxLayout" name="verticalLayout_2">
+           <item>
+            <layout class="QFormLayout" name="formLayout">
+             <property name="fieldGrowthPolicy">
+              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+             </property>
+             <item row="1" column="0">
+              <widget class="QLabel" name="xdmfFilePathLabel">
+               <property name="text">
+                <string>XDMF file path</string>
+               </property>
+              </widget>
+             </item>
+             <item row="1" column="1">
+              <widget class="QLineEdit" name="xdmfFilePathLineEdit"/>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="xdmfFileTypeLabel">
+               <property name="text">
+                <string>XDMF file type</string>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="1">
+              <widget class="QComboBox" name="xdmfFileTypeComboBox">
+               <item>
+                <property name="text">
+                 <string>Full description</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>Pseudo description</string>
+                </property>
+               </item>
+              </widget>
+             </item>
+             <item row="2" column="1">
+              <widget class="QPushButton" name="browseFile">
+               <property name="text">
+                <string>Browse...</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </widget>
         </item>
         <item>
