--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>429</width>
-    <height>468</height>
+    <width>395</width>
+    <height>714</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>393</width>
-         <height>557</height>
+         <width>377</width>
+         <height>674</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -52,25 +52,110 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
-            <widget class="QCheckBox" name="dsmIsServer">
-             <property name="text">
-              <string>Is Server (For testing only)</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-             <property name="tristate">
-              <bool>false</bool>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <layout class="QFormLayout" name="formLayout_3">
-             <property name="fieldGrowthPolicy">
-              <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-             </property>
-             <item row="0" column="1">
+            <layout class="QGridLayout" name="gridLayout">
+             <item row="6" column="0">
+              <widget class="QPushButton" name="createDSM">
+               <property name="text">
+                <string>CreateDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="1">
+              <widget class="QPushButton" name="destroyDSM">
+               <property name="text">
+                <string>DestroyDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="6" column="2">
+              <widget class="QPushButton" name="clearDSM">
+               <property name="text">
+                <string>ClearDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="0">
+              <widget class="QPushButton" name="h5Dump">
+               <property name="text">
+                <string>H5Dump</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="1">
+              <widget class="QPushButton" name="testDSM">
+               <property name="text">
+                <string>TestDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="7" column="2">
+              <widget class="QPushButton" name="displayDSM">
+               <property name="text">
+                <string>DisplayDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="0">
+              <widget class="QPushButton" name="unpublishDSM">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text">
+                <string>UnpublishDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="3" column="0">
+              <widget class="QPushButton" name="publishDSM">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
+               <property name="text">
+                <string>PublishDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0" colspan="3">
+              <spacer name="horizontalSpacer">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item row="3" column="2">
+              <widget class="QPushButton" name="connectDSM">
+               <property name="layoutDirection">
+                <enum>Qt::LeftToRight</enum>
+               </property>
+               <property name="text">
+                <string>ConnectDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="4" column="2">
+              <widget class="QPushButton" name="disconnectDSM">
+               <property name="text">
+                <string>DisconnectDSM</string>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="2">
               <widget class="QComboBox" name="xdmfCommTypeComboBox">
+               <property name="currentIndex">
+                <number>1</number>
+               </property>
                <item>
                 <property name="text">
                  <string>MPI</string>
@@ -83,84 +168,85 @@
                </item>
               </widget>
              </item>
-             <item row="0" column="0">
+             <item row="1" column="2">
+              <widget class="QSpinBox" name="xdmfCommPort">
+               <property name="maximum">
+                <number>65535</number>
+               </property>
+               <property name="singleStep">
+                <number>1000</number>
+               </property>
+               <property name="value">
+                <number>22000</number>
+               </property>
+              </widget>
+             </item>
+             <item row="2" column="0" colspan="2">
               <widget class="QLabel" name="xdmfCommTypeLabel">
                <property name="text">
                 <string>DSM InterCommunication</string>
                </property>
               </widget>
              </item>
-            </layout>
-           </item>
-           <item>
-            <layout class="QGridLayout" name="gridLayout">
+             <item row="1" column="0">
+              <widget class="QComboBox" name="dsmServerName">
+               <property name="currentIndex">
+                <number>0</number>
+               </property>
+               <item>
+                <property name="text">
+                 <string>agno.staff.cscs.ch</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>dino.staff.cscs.ch</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>breno.staff.cscs.ch</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
+                 <string>horus.login.cscs.ch</string>
+                </property>
+               </item>
+              </widget>
+             </item>
              <item row="0" column="0">
-              <widget class="QPushButton" name="createDSM">
+              <widget class="QRadioButton" name="dsmIsStandalone">
                <property name="text">
-                <string>CreateDSM</string>
+                <string>Standalone</string>
+               </property>
+               <property name="checked">
+                <bool>true</bool>
                </property>
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="QPushButton" name="destroyDSM">
+              <widget class="QRadioButton" name="dsmIsServer">
                <property name="text">
-                <string>DestroyDSM</string>
+                <string>Server</string>
                </property>
               </widget>
              </item>
              <item row="0" column="2">
-              <widget class="QPushButton" name="clearDSM">
+              <widget class="QRadioButton" name="dsmIsClient">
                <property name="text">
-                <string>ClearDSM</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0">
-              <widget class="QPushButton" name="publishDSM">
-               <property name="text">
-                <string>PublishDSM</string>
+                <string>Client</string>
                </property>
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QPushButton" name="unpublishDSM">
+              <widget class="QToolButton" name="toolButton">
                <property name="text">
-                <string>UnpublishDSM</string>
+                <string>...</string>
                </property>
-              </widget>
-             </item>
-             <item row="2" column="0">
-              <widget class="QPushButton" name="connectDSM">
-               <property name="text">
-                <string>ConnectDSM</string>
-               </property>
-              </widget>
-             </item>
-             <item row="2" column="1">
-              <widget class="QPushButton" name="disconnectDSM">
-               <property name="text">
-                <string>DisconnectDSM</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="0">
-              <widget class="QPushButton" name="h5Dump">
-               <property name="text">
-                <string>H5Dump</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="1">
-              <widget class="QPushButton" name="testDSM">
-               <property name="text">
-                <string>TestDSM</string>
-               </property>
-              </widget>
-             </item>
-             <item row="3" column="2">
-              <widget class="QPushButton" name="displayDSM">
-               <property name="text">
-                <string>DisplayDSM</string>
+               <property name="icon">
+                <iconset>
+                 <normaloff>../../../pv-meshless/Qt/Components/Resources/Icons/pqConnect24.png</normaloff>../../../pv-meshless/Qt/Components/Resources/Icons/pqConnect24.png</iconset>
                </property>
               </widget>
              </item>
@@ -170,32 +256,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QTextEdit" name="infoTextOutput">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Ignored" vsizetype="MinimumExpanding">
-            <horstretch>0</horstretch>
-            <verstretch>1</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>40</height>
-           </size>
-          </property>
-          <property name="frameShadow">
-           <enum>QFrame::Sunken</enum>
-          </property>
-          <property name="readOnly">
-           <bool>true</bool>
-          </property>
-         </widget>
+         <widget class="QLineEdit" name="infoTextOutput"/>
         </item>
         <item>
          <widget class="QFrame" name="frame">
