--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>395</width>
+    <width>444</width>
     <height>714</height>
    </rect>
   </property>
@@ -28,8 +28,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>377</width>
-         <height>674</height>
+         <width>426</width>
+         <height>671</height>
         </rect>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -213,6 +213,11 @@
                  <string>horus.login.cscs.ch</string>
                 </property>
                </item>
+               <item>
+                <property name="text">
+                 <string>localhost</string>
+                </property>
+               </item>
               </widget>
              </item>
              <item row="0" column="0">
@@ -241,6 +246,9 @@
              </item>
              <item row="1" column="1">
               <widget class="QToolButton" name="toolButton">
+               <property name="enabled">
+                <bool>false</bool>
+               </property>
                <property name="text">
                 <string>...</string>
                </property>
