--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -254,7 +254,7 @@
                </property>
                <property name="icon">
                 <iconset>
-                 <normaloff>../../../pv-meshless/Qt/Components/Resources/Icons/pqConnect24.png</normaloff>../../../pv-meshless/Qt/Components/Resources/Icons/pqConnect24.png</iconset>
+                 <normaloff>:/pqWidgets/Icons/pqConnect24.png</normaloff>:/pqWidgets/Icons/pqConnect24.png</iconset>
                </property>
               </widget>
              </item>
