--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -53,42 +53,42 @@
           <layout class="QVBoxLayout" name="verticalLayout_3">
            <item>
             <layout class="QGridLayout" name="gridLayout">
-             <item row="6" column="0">
+             <item row="7" column="0">
               <widget class="QPushButton" name="createDSM">
                <property name="text">
                 <string>CreateDSM</string>
                </property>
               </widget>
              </item>
-             <item row="6" column="1">
+             <item row="7" column="1">
               <widget class="QPushButton" name="destroyDSM">
                <property name="text">
                 <string>DestroyDSM</string>
                </property>
               </widget>
              </item>
-             <item row="6" column="2">
+             <item row="7" column="2">
               <widget class="QPushButton" name="clearDSM">
                <property name="text">
                 <string>ClearDSM</string>
                </property>
               </widget>
              </item>
-             <item row="7" column="0">
+             <item row="8" column="0">
               <widget class="QPushButton" name="h5Dump">
                <property name="text">
                 <string>H5Dump</string>
                </property>
               </widget>
              </item>
-             <item row="7" column="1">
+             <item row="8" column="1">
               <widget class="QPushButton" name="testDSM">
                <property name="text">
                 <string>TestDSM</string>
                </property>
               </widget>
              </item>
-             <item row="7" column="2">
+             <item row="8" column="2">
               <widget class="QPushButton" name="displayDSM">
                <property name="text">
                 <string>DisplayDSM</string>
@@ -121,7 +121,7 @@
                </property>
               </widget>
              </item>
-             <item row="5" column="0" colspan="3">
+             <item row="6" column="0" colspan="3">
               <spacer name="horizontalSpacer">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
@@ -255,6 +255,13 @@
                <property name="icon">
                 <iconset>
                  <normaloff>:/pqWidgets/Icons/pqConnect24.png</normaloff>:/pqWidgets/Icons/pqConnect24.png</iconset>
+               </property>
+              </widget>
+             </item>
+             <item row="5" column="0" colspan="2">
+              <widget class="QCheckBox" name="storeDSMContents">
+               <property name="text">
+                <string>Store DSM contents</string>
                </property>
               </widget>
              </item>
