--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -245,9 +245,9 @@
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="QToolButton" name="toolButton">
+              <widget class="QToolButton" name="addServerDSM">
                <property name="enabled">
-                <bool>false</bool>
+                <bool>true</bool>
                </property>
                <property name="text">
                 <string>...</string>
@@ -353,6 +353,9 @@
           <property name="rootIsDecorated">
            <bool>false</bool>
           </property>
+          <attribute name="headerVisible">
+           <bool>true</bool>
+          </attribute>
           <attribute name="headerVisible">
            <bool>true</bool>
           </attribute>
