add default socket address
git-svn-id: https://svn.cscs.ch/csviz/trunk/Projects/ICARUS@1606 a8ef729d-7618-0410-a8c4-833010e87eec

--- a/pqDSMViewerPanel.ui
+++ b/pqDSMViewerPanel.ui
@@ -195,6 +195,11 @@
                </property>
                <item>
                 <property name="text">
+                 <string>default</string>
+                </property>
+               </item>
+               <item>
+                <property name="text">
                  <string>agno.staff.cscs.ch</string>
                 </property>
                </item>
